Another JDK version fix